# vocechat-server-rust

./: .env  dev.md
crates/eth-contract/: Cargo.toml
crates/gear-contract-api/: Cargo.toml
crates/gear-contract-api/src/: lib.rs  main.rs
migrations/: 20230920190900_user_auth_twitter.sql  20230926190900_twitter_auth.sql  20230928093903_twitter_user.sql  20231024104803_wallet.sql  20240109130400_addEthAddressToWallet.sql
src/: create_user.rs  state.rs
src/api/: admin_github_auth.rs  admin_twitter_auth.rs  client.rs  group.rs  mod.rs  token.rs  user.rs
src/api/serivce/: group_service.rs
src/api/share/: mod.rs
