[package]
name = "gear-contract-api"
version = "0.1.0"
edition = "2021"

[dependencies]
gclient = { git = "https://github.com/gear-tech/gear.git" }
gear-core = { git = "https://github.com/gear-tech/gear.git" }
tokio = { version = "1.23.0", features = ["full"] }
primitive-types = {features = ["scale-info"] }
scale-info = { version = "2.5.0", default-features = false }
parity-scale-codec = { version = "3.6.4", default-features = false }

[dev-dependencies]
gclient = { git = "https://github.com/gear-tech/gear.git" }
tokio = { version = "1.23.0", features = ["full"] }

